--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/contact.css">
     
     <title>Lucky Streak Lounge</title>
 </head>
@@ -26,17 +27,26 @@
         </div>
     </header>
     <main>
-        <div id="spacing">
         <div class="container">
-            <form id="contactUs" class="form-horizontal">
-                <div class="form-group row">
-                    <label class="control-label col-sm-2" for="firstName">First Name:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
-                    </div>
-                </div>
-            </form>
-        </div>
+            <div class="main-block">
+                <div class="left-part">
+                    <i class="fas fa-envelope"></i>
+                    <i class="fas fa-at"></i>
+                  </div>
+                <form action="/">
+                  <h1>Contact Us</h1>
+                  <div class="info">
+                    <input class="fname" type="text" name="fname" placeholder="First name" required>
+                    <input class="fname" type="text" name="lname" placeholder="Last name" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="text" name="phone" placeholder="Phone number" required>
+                  </div>
+                  <div>
+                    <textarea rows="4" placeholder="Enter message here" required></textarea>
+                  </div>
+                  <button type="submit" href="/">Submit</button>
+                </form>
+              </div>
         </div>
    </main>
     <script src="js/main.js"></script>
